--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.koushikdutta.ion:ion:2.+'
-    implementation 'com.google.android.gms:play-services-gcm:12.0.0' 
+    implementation 'com.google.android.gms:play-services-gcm:12.0.0'
+
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //gson
+    implementation 'com.google.code.gson:gson:2.7'
 }
