imagens de cartão

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         </activity>
         <activity android:name=".gui.RegisterActivity">
         </activity>
+        <activity android:name=".gui.CardListActivity">
+        </activity>
     </application>
 
 </manifest>
